# GeoPlant

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
baselines/: index.html  k-values-test.ipynb  naive-approach-baselines.ipynb
baselines/MME/: Bioclim-resnet6.ipynb  Landsat-resnet6.ipynb  MME-2M(Bioclim+Landsat).ipynb  MME-3M(Bioclim+Landsat+Sentinel2).ipynb  Sentinel2-resnet6.ipynb
baselines/MaxEnt/: README.md  requirements.txt
baselines/MaxEnt/geoplant_maxent/: __init__.py  config.py  data.py  encoding.py  evaluation.py  experiment.py  io_csv.py  metrics.py  model.py  predict.py
baselines/PseudoPAwithMAE/: .gitignore  README.md  location_only_sdm.ipynb  po_neighborhood_inference.ipynb  pseudo_pa_with_mae.ipynb  run_species_only.py  species_only_training_walkthrough.ipynb
baselines/XGBoost/: README.md  mkdocs.yml  requirements-docs.txt  requirements.txt  run_single_predictor_framework.ipynb  xgboost-10.ipynb  xgboost-11.ipynb  xgboost-12.ipynb  xgboost-2.ipynb  xgboost-4.ipynb  xgboost-5.ipynb  xgboost-7.ipynb  xgboost-8.ipynb  xgboost-9.ipynb
baselines/XGBoost/docs/: api.md  (+5 more)
dataset/: README.md  __init__.py  config.py  data_download.py  geoplant.py  index.html
dataset/tests/: conftest.py  test_create_pa_test_splits.py  test_data_download.py  test_extract.py  test_geoplant.py  test_split_pa_elevation_values.py  test_split_pa_environmental_values.py
docs/: baselines.md  dataset.md  environmental_predictors.md  index.md  license.md  resources.md
environmental_predictors/: index.html
license/: index.html
metadata-preprocessing/: bioregion-extraction.py  upscale-location.py
resources/: index.html
scripts/: data_download.py
search/: search_index.json
(+32 files in other folders)
