[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoplant"
version = "0.1.0"
description = "GeoPlant dataset downloader and access utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "tqdm",
]

[project.optional-dependencies]
preprocessing = [
    "geopandas",
    "pandas",
    "pyarrow",
    "reverse-geocoder",
    "swifter",
]
notebook = [
    "ipykernel",
    "nbclient",
    "nbformat",
    "notebook",
    "wandb",
]
test = [
    "pytest",
]
xgboost = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "xgboost>=3.0",
]

[project.scripts]
geoplant = "dataset.data_download:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["dataset", "geoplant_xgb"]

[tool.setuptools.package-dir]
geoplant_xgb = "baselines/XGBoost/geoplant_xgb"
